Added Raw Insert At Tail and input restrictions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "C_Cpp.default.includePath": [
         "${workspacedir}/src/"
-    ]
+    ],
+    "cmake.sourceDirectory": "C:/Users/ASUS/CS163_DataStructuresVisualizer/extern/include/raylib-cpp"
 }
