Adding image return menu button and fixing pseudo code font

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,8 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "heap_input_box": "cpp"
+        "heap_input_box": "cpp",
+        "fstream": "cpp",
+        "future": "cpp"
     }
 }
